# asynchrony

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_SETUP.md  Doxyfile  README.md  SETUP_COMPLETE.md  SiddiqSoft.asynchrony.natvis  azure-pipelines.yml  generate_docs.bat  generate_docs.sh  index.md  project-base.json  update_doxyfile_version.sh
.azure/: az-build-linux.yml  az-deploy-pages.yml
.github/workflows/: doxygen.yml
assets/css/: style.css.map
docs/: GITHUB_PAGES_SETUP.md  README.md  _config.yml  index.md
docs/pages/: examples.md  getting_started.md  mainpage.md  quick_reference.md  usage_guide.md
doxygen/html/: annotated.html  annotated_dup.js  classes.html  classsiddiqsoft_1_1resource__pool-members.html  classsiddiqsoft_1_1resource__pool.html  classsiddiqsoft_1_1resource__pool.js  common_8hpp_source.html  dir_0ac14a15e61cb79330c249c8611539c8.html  dir_0ac14a15e61cb79330c249c8611539c8_dep.map  dir_0ac14a15e61cb79330c249c8611539c8_dep.md5  dir_0de89cf86d7554fc233e6470f73b75e3.html  dir_0de89cf86d7554fc233e6470f73b75e3.js  dir_0de89cf86d7554fc233e6470f73b75e3_dep.map  dir_0de89cf86d7554fc233e6470f73b75e3_dep.md5  dir_16d993b0a2cf38075ffd3646074df01f.html  dir_16d993b0a2cf38075ffd3646074df01f.js  dir_16d993b0a2cf38075ffd3646074df01f_dep.map  dir_16d993b0a2cf38075ffd3646074df01f_dep.md5  dir_4a7836fb781af363a93f0a089ecb970f.html  dir_4a7836fb781af363a93f0a089ecb970f.js  dir_4a7836fb781af363a93f0a089ecb970f_dep.map  dir_4a7836fb781af363a93f0a089ecb970f_dep.md5  dir_84996a7c77471836fad1ddd540973e48.html  dir_84996a7c77471836fad1ddd540973e48.js  dir_84996a7c77471836fad1ddd540973e48_dep.map  dir_84996a7c77471836fad1ddd540973e48_dep.md5  dir_a5c23e4d4d2f2652fc21caa9afd4c5c7.html  dir_bbc427824a48acb35e6d1fc10c2c0e67.html  dir_bbc427824a48acb35e6d1fc10c2c0e67.js  dir_bbc427824a48acb35e6d1fc10c2c0e67_dep.map  dir_bbc427824a48acb35e6d1fc10c2c0e67_dep.md5  dir_c8d8a931b90ba90dc17a422b85a5a5fb.html  dir_cb1632ed865a04bb2a63c0c876804726.html  dir_cb1632ed865a04bb2a63c0c876804726.js  dir_cb1632ed865a04bb2a63c0c876804726_dep.map  dir_cb1632ed865a04bb2a63c0c876804726_dep.md5  dir_d7bda13d175a2b07d1462d0d7a8fe64f.html  dir_d7bda13d175a2b07d1462d0d7a8fe64f_dep.map  dir_d7bda13d175a2b07d1462d0d7a8fe64f_dep.md5  doxygen_crawl.html  (+30 more)
doxygen/html/search/: all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1b.js  all_2.js  all_6.js  all_9.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  pages_0.js  pages_1.js  pages_10.js  pages_13.js  pages_14.js  pages_15.js  pages_16.js  pages_18.js  pages_1a.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  (+4 more)
include/siddiqsoft/: periodic_worker.hpp  resource_pool.hpp  roundrobin_pool.hpp  simple_pool.hpp  simple_worker.hpp
include/siddiqsoft/private/: common.hpp
pack/: SiddiqSoft.asynchrony.nuspec  SiddiqSoft.asynchrony.targets
pages/: getting_started.md  mainpage.md  quick_reference.md
tests/: CMakeLists.txt  additional_bugs.cpp  bug_tests.cpp  callback_stress_tests.cpp  callback_stress_tests_old.cpp  data_race_detection.cpp  periodic_worker.cpp  resource_pool.cpp  roundrobin_pool.cpp  simple_pool.cpp  simple_worker.cpp
